# stats_sync_gss

./: Dockerfile  README.md  crontab  pyproject.toml
src/: main.py
