[project]
name = "stats-sync-gss"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "eeharumt", email = "fukurou.origin@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "sqlalchemy>=2.0.31",
    "gspread>=6.1.2",
    "oauth2client>=4.1.3",
    "pymysql>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
